<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:gravity="center_horizontal"
  android:layout_gravity="center"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="eu.bquepab.myappportfolio.MainActivity">

  <TextView
    android:id="@+id/header_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/header_tv" />

  <Button
    android:id="@+id/popular_movies"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/popular_movies_btn"/>

  <Button
    android:id="@+id/stock_hawk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/stock_hawk_btn"/>

  <Button
    android:id="@+id/build_it_bigger"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/build_it_bigger_btn"/>

  <Button
    android:id="@+id/make_your_app_material"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/make_your_app_material_btn"/>

  <Button
    android:id="@+id/go_ubiquitous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/go_ubiquitous_btn"/>

  <Button
    android:id="@+id/capstone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/capstone_btn"/>
</LinearLayout>
